made some changes to increase efficiency of the algorithm and added comments